# well

./: .gitignore  CONFIG_TEMPLATE.env  LICENSE  README.md  REQUIREMENTS.md  pyproject.toml
.github/workflows/: build-app.yml  mobile-app.yml
mobile/: .env.example  App.tsx  README.md  app.config.js  app.json  eas.json  package-lock.json  package.json  tsconfig.json
mobile/src/config/: appConfig.ts
mobile/src/core/: mobileSync.ts  parser.ts  sampleSync.ts  types.ts
mobile/src/fixtures/: sampleEmails.ts
mobile/src/providers/: deviceCalendar.ts  googleApi.ts
mobile/src/storage/: secureTokens.ts  syncState.ts
mobile/tests/: parser.test.ts
packaging/: wellpass_sync_gui.py
samples/: README.md
tests/: test_calendar.py  test_cli.py  test_config.py  test_gui.py  test_parser.py  test_provider_payloads.py  test_scheduler.py
tests/fixtures/: booking-confirmation.eml  cancellation.eml  partner-booking.eml
tools/: build_executable.py
wellpass_sync/: __init__.py  __main__.py  app_paths.py  calendar.py  config.py  email_source.py  gmail_mail.py  google_auth.py  google_calendar.py  graph_mail.py  gui.py  models.py  outlook_calendar.py  parser.py  scheduler.py  secrets.py  settings_store.py  state.py  sync.py
